bug fixed - wrong font of project titles

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -31,20 +31,20 @@
     .project-title {
       border-radius: 32px 32px 0 0;
       cursor: pointer;
-      font-family: 'Josefin Sans';
+      font-family: 'JosefinSans';
       font-size: 30px;
       font-weight: 500;
       line-height: 36px;
-      padding: 32px;
+      padding: 33px;
 
       @include respond(medium) {
         font-size: 20px;
-        padding: 32px 32px 7px 32px;
+        padding: 32px 32px 8px 32px;
       }
 
       @include respond(small) {
         font-size: 12px;
-        padding: 16px 16px 11px 16px;
+        padding: 16px 16px 12px 16px;
       }
     }
 
